# beddel

./: .gitignore  CONTRIBUTING.md  CUSTOM_AGENTS.md  README.md  beddel_apify.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  prompt_refactor_agents.md  prompt_setup.md  test-custom-agents.ts  tsconfig.json
.github/workflows/: generate-kit-registry.yml  validate-kits.yml
app/: page.tsx
docs/architecture/: api-reference.md  components.md  core-workflows.md  high-level-architecture.md  source-tree.md
examples/: README.md
examples/claude/: code-review.yaml  run-prompt.yaml
kits/: registry.json
kits/ag-ui-kit/: kit.yaml
kits/agent-a2a-kit/: README.md  kit.yaml
kits/agent-claude-kit/: README.md  kit.yaml
kits/agent-codex-kit/: README.md  kit.yaml
kits/agent-kimi-kit/: README.md  kit.yaml
kits/agent-kiro-kit/: README.md  kit.yaml
kits/agent-openclaw-kit/: README.md  kit.yaml
kits/agentrq-approval-kit/: README.md  kit.yaml
kits/antigravity-sdk-kit/: README.md  kit.yaml
kits/auth-firebase-kit/: README.md  kit.yaml
kits/auth-github-kit/: README.md  kit.yaml
kits/bonar-cms-kit/: README.md  kit.yaml
kits/bridge-adk-kit/: README.md  (+1 more)
kits/software-development-kit/python/: pyproject.toml
kits/software-development-kit/python/beddel_software_development/: __init__.py
kits/software-development-kit/python/beddel_software_development/tools/: gates.py
kits/software-development-kit/python/beddel_software_development/workflows/: create-epic.yaml
scripts/: README.md  sync_kit_schema.py  sync_workflow_schema.py
spec/: PROTOCOL.md
(+651 files in other folders)
